# Prusa-Firmware-Buddy

./: .clangd  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  ProjectOptions.cmake  README.md  requirements.txt
src/common/feature/filament_sensor/: CMakeLists.txt  filament_sensor.cpp  filament_sensor.hpp  filament_sensor_adc.cpp  filament_sensor_adc.hpp  filament_sensor_adc_eval.cpp  filament_sensor_adc_eval.hpp  filament_sensor_id.hpp  filament_sensor_invertible.cpp  filament_sensor_invertible.hpp  filament_sensor_ix_side.hpp  filament_sensor_mmu.hpp  filament_sensor_photoelectric.hpp  filament_sensor_states.cpp  filament_sensor_states.hpp  (+12 more)
src/common/selftest/: CMakeLists.txt  power_check.cpp  power_check_both.cpp  selftest_COREONE.cpp  selftest_COREONEL.cpp  selftest_COREONEL_INDX.cpp  selftest_COREONE_INDX.cpp  selftest_MINI.cpp  selftest_MK3.5.cpp  selftest_MK4.cpp  selftest_XL.cpp  selftest_axis.cpp  selftest_axis.h  selftest_axis_interface.cpp  selftest_data.cpp  selftest_data.hpp  selftest_dock.cpp  selftest_dock.h  selftest_dock_config.hpp  selftest_dock_interface.cpp  selftest_dock_interface.hpp  selftest_fans.cpp  selftest_fans.hpp  selftest_fans_config.hpp  selftest_firstlayer.cpp  selftest_fsensor.cpp  selftest_fsensor.h  selftest_fsensor_config.hpp  selftest_heater.cpp  selftest_heater.h  selftest_heater_config.hpp  selftest_heaters_interface.cpp  selftest_heaters_interface.hpp  selftest_iX.cpp  selftest_invocation.cpp  selftest_invocation.hpp  selftest_loadcell.cpp  selftest_loadcell.h  selftest_loadcell_config.hpp  selftest_loadcell_indx.cpp  (+11 more)
src/common/tool/: CMakeLists.txt
src/feature/: CMakeLists.txt
src/feature/auto_retract/: auto_retract.cpp
src/feature/chamber_filtration/: chamber_filtration.cpp
src/feature/contactless_offset/: can_remote_sensor_glue.cpp
src/feature/door_sensor_calibration/: door_sensor_calibration.cpp
src/feature/factory_reset/: factory_reset.cpp
src/feature/filament_sensor/: CMakeLists.txt  filament_sensors_handler.cpp  filament_sensors_handler_default.cpp
src/feature/filament_tracker/: filament_tracker.cpp  filament_tracker.hpp
src/feature/gearbox_alignment/: gcode_gearbox_alignment.cpp
src/feature/indx_dock_calibration/: CMakeLists.txt  dialog_dock_select.cpp  dialog_dock_select.hpp  dock_calibration_data.hpp  indx_dock_calibration.cpp  indx_dock_calibration.hpp  screen_dock_calibration.cpp  screen_dock_calibration.hpp
src/feature/indx_hotend_temp_compensation/: CMakeLists.txt  buddy_indx_hotend_temp_compensation.cpp  buddy_indx_hotend_temp_compensation.hpp  indx_filament_params.cpp  indx_hotend_temp_compensation.cpp
src/feature/indx_hotend_temp_model/: CMakeLists.txt  hotend_temp_model.cpp  hotend_temp_model.hpp  indx_filament_params.cpp  indx_filament_params.hpp  indx_hotend_temp_compensation.cpp  indx_hotend_temp_compensation.hpp  indx_hotend_thermal_model.cpp  indx_hotend_thermal_model.hpp
src/feature/indx_nozzle_cleaner_calibration/: CMakeLists.txt  indx_nozzle_cleaner_calibration.cpp  indx_nozzle_cleaner_calibration.hpp  screen_nozzle_cleaner_calibration.cpp  screen_nozzle_cleaner_calibration.hpp
src/feature/indx_tool_lock_hack/: indx_tool_lock_hack.cpp  indx_tool_lock_hack.hpp
src/feature/indx_tool_offsets_calibration/: indx_tool_offsets_calibration.cpp  screen_indx_tool_offsets_calibration.cpp
src/feature/nozzle_cleaner/: nozzle_cleaner.cpp
src/feature/nozzle_cleaning_failed/: nozzle_cleaning_failed_wizard.cpp
src/feature/ramming/: standard_ramming_sequence_indx.cpp
src/feature/tool_offset_calibration/: CMakeLists.txt  tool_offset_calibration.cpp  tool_offset_calibration.hpp
src/feature/wastebin_watcher/: CMakeLists.txt  wastebin_watcher.cpp  wastebin_watcher.hpp
src/feature/xbuddy_extension/: xbuddy_extension.cpp  xbuddy_extension.hpp
src/module/: CMakeLists.txt
src/module/accelerometer_record/: CMakeLists.txt
src/module/anfc/: CMakeLists.txt
src/module/coding/: CMakeLists.txt
src/module/contactless_offset/: CMakeLists.txt
src/module/cortex-m0-atomics/: CMakeLists.txt  README.md
src/module/fifo_coder/: CMakeLists.txt  README.md
src/module/i2c/: CMakeLists.txt
src/module/indx_head/: CMakeLists.txt
src/module/iso13239/: CMakeLists.txt
src/module/modbus/: CMakeLists.txt
src/module/nfc/: CMakeLists.txt
src/module/nfcv/: commands.cpp  decode.cpp  encode.cpp
src/module/onewire/: CMakeLists.txt
src/module/otp/: CMakeLists.txt
src/module/peripheries/: CMakeLists.txt
src/module/signal_processing/: CMakeLists.txt
src/module/spi/: CMakeLists.txt
src/module/tool_offset_sensor/: CMakeLists.txt
src/module/tpis/: CMakeLists.txt
src/module/utils/: CMakeLists.txt
src/module/xbuddy_extension/: modbus.cpp
src/puppies/: BootloaderProtocol.cpp  CMakeLists.txt  Dwarf.cpp  INDX.cpp  PuppyBootstrap.cpp  PuppyBus.cpp  PuppyModbus.cpp  ac_controller.cpp  mmu.cpp  modular_bed.cpp  puppy_crash_dump.cpp  puppy_task.cpp  time_sync.cpp  tool_offset_sensor.cpp  xbuddy_extension.cpp  xbuddy_extension_bootstrap.cpp
src/puppy/anfc/: CMakeLists.txt  anfc_event_publisher.cpp  anfc_event_publisher.hpp  bsod.h  cyphal_anfc_node.cpp  cyphal_anfc_node.hpp  enum_mapping_check.cpp  hal.cpp  hal.hpp  main.cpp  nfc.cpp  nfc.hpp  nfc_stm32c0.ioc  nfc_task.cpp  nfc_task.hpp  precise_timer.cpp  precise_timer.hpp  stdlib.c  stdlib.cpp
src/puppy/indx_head/: CMakeLists.txt  README.md  idle.nozzle.picked.txt  indx_head.ioc
src/puppy/tool_offset_sensor/: CMakeLists.txt  tool_offset_sensor.ioc
src/puppy/xbuddy_extension/: CMakeLists.txt  app.cpp  cyphal_application.cpp  cyphal_application.hpp  cyphal_application_impl.hpp  cyphal_presentation.cpp  cyphal_presentation.hpp  cyphal_transport.cpp  hal.cpp  hal.hpp  hal_ext_fs.cpp  hal_ext_fs.hpp  hal_gpio_expander.cpp  hal_gpio_expander.hpp  hal_mmu.cpp  hal_mmu.hpp  hal_pub.cpp  hal_rng.cpp  hal_rng.hpp  hal_rs485.cpp  hal_rs485.hpp  main.cpp  mmu.cpp  mmu.hpp  modbus.cpp  modbus.hpp  temperature.cpp
tests/unit/marlin/: CMakeLists.txt  machine_pos_conv_tests.cpp
tests/unit/puppies/: CMakeLists.txt  time_sync.cpp
(+1755 files in other folders)
