if(HAS_GEARBOX_ALIGNMENT)
  add_subdirectory(gearbox_alignment)
endif()
if(HAS_NOZZLE_CLEANER)
  add_subdirectory(nozzle_cleaner)
endif()
if(HAS_DOOR_SENSOR_CALIBRATION)
  add_subdirectory(door_sensor_calibration)
endif()
if(HAS_INDX)
  add_subdirectory(indx_dock_calibration)
  add_subdirectory(tool_offset_calibration)
  add_subdirectory(indx_nozzle_cleaner_calibration)
endif()
