target_sources(
  firmware PRIVATE filament_sensor.cpp filament_sensor_states.cpp filament_sensors_handler.cpp
  )
if(FILAMENT_SENSOR STREQUAL "ADC")
  target_sources(firmware PRIVATE filament_sensor_adc.cpp filament_sensor_adc_eval.cpp)
elseif(PRINTER STREQUAL "MINI" OR PRINTER STREQUAL "MK3.5")
  target_sources(firmware PRIVATE filament_sensor_photoelectric.cpp)
endif()
if(HAS_MMU2)
  target_sources(firmware PRIVATE filament_sensor_mmu.cpp)
endif()
if(HAS_SIDE_FSENSOR_INVERTIBLE OR HAS_FSENSOR_INVERTIBLE)
  target_sources(firmware PRIVATE filament_sensor_invertible.cpp)
endif()
if(HAS_XBUDDY_EXTENSION)
  target_sources(firmware PRIVATE filament_sensor_xbuddy_extension.cpp)
endif()

if(BOARD_IS_MASTER_BOARD)
  add_subdirectory(calibrator)

  if(HAS_SIDE_FSENSOR_REMAP)
    target_sources(firmware PRIVATE filament_sensors_handler_remap.cpp)
  endif()
  if(PRINTER STREQUAL "iX")
    target_sources(
      firmware PRIVATE filament_sensor_ix_side.cpp filament_sensors_handler_default.cpp
      )
  elseif(PRINTER STREQUAL "XL" OR PRINTER STREQUAL "XL_DEV_KIT")
    target_sources(firmware PRIVATE filament_sensors_handler_XL.cpp)
  elseif(PRINTER STREQUAL "COREONE_INDX" OR PRINTER STREQUAL "COREONEL_INDX")
    target_sources(firmware PRIVATE filament_sensors_handler_INDX.cpp)
  else()
    target_sources(firmware PRIVATE filament_sensors_handler_default.cpp)
  endif()
endif()
